# tox-pyenv-redux

./: .gitignore  LICENSE  README.md  pyproject.toml
src/_tox_pyenv_redux/: plugin.py
tests/: test_plugin.py
