[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'tox-pyenv-redux'
description = 'A tox Python discovery plugin for pyenv-installed interpreters'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
    {name = 'un.def', email = 'me@undef.im'},
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Framework :: tox',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
keywords = ['tox', 'pyenv']
requires-python = '>= 3.8'
dependencies = [
    'tox >= 4',
    'virtualenv-pyenv >= 0.5, < 0.6',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/un-def/tox-pyenv-redux'
Repository = 'https://github.com/un-def/tox-pyenv-redux.git'
Changelog = 'https://github.com/un-def/tox-pyenv-redux/releases'
Issues = 'https://github.com/un-def/tox-pyenv-redux/issues'

[project.entry-points.tox]
pyenv-redux = '_tox_pyenv_redux.plugin'

[tool.setuptools.dynamic]
version = {attr = '_tox_pyenv_redux.__version__'}

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.tox]
legacy_tox_ini = '''
[tox]
env_list =
    py38
    py39
    py310
    py311
    py312
    flake8
    isort

[testenv]
deps = pytest
commands = pytest {posargs}

[testenv:flake8]
skip_install = true
deps = flake8
commands = flake8 {posargs}

[testenv:isort]
skip_install = true
deps = isort
commands = isort {posargs:. -c}
'''
