[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'tox-pyenv-redux'
description = 'A tox Python discovery plugin for pyenv-installed interpreters'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE']
authors = [
    {name = 'Dmitry Meyer', email = 'me@undef.im'},
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Framework :: tox',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
keywords = ['tox', 'pyenv']
requires-python = '>= 3.10'
dependencies = [
    'tox >= 4',
    'virtualenv-pyenv >= 0.7, < 0.8',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/un-def/tox-pyenv-redux'
Repository = 'https://github.com/un-def/tox-pyenv-redux.git'
Changelog = 'https://github.com/un-def/tox-pyenv-redux/releases'
Issues = 'https://github.com/un-def/tox-pyenv-redux/issues'

[project.entry-points.tox]
pyenv-redux = '_tox_pyenv_redux.plugin'

[dependency-groups]
lint = [
    'flake8',
    'isort',
]
test = [
    'pytest >= 9',
]
dev = [
    {include-group = 'lint'},
    {include-group = 'test'},
]

[tool.setuptools.dynamic]
version = {attr = '_tox_pyenv_redux.__version__'}

[tool.isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true

[tool.pytest]
minversion = '9.0'
testpaths = ['tests']

[tool.tox]
env_list = [
    { product = [{ prefix = "py3", start = 10, stop = 14 }] },
    "flake8",
    "isort",
]

[tool.tox.env_run_base]
deps = ["pytest"]
commands = [["pytest", { replace = "posargs", extend = true }]]

[tool.tox.env.flake8]
skip_install = true
deps = ["flake8"]
commands = [["flake8", { replace = "posargs", extend = true }]]

[tool.tox.env.isort]
skip_install = true
deps = ["isort"]
commands = [["isort", { replace = "posargs", default = [".", "-c"], extend = true }]]
